--- a/tpl/rating.css
+++ b/tpl/rating.css
@@ -11,7 +11,6 @@
 .rating-title {
 	font-size: 16px;
 	font-weight: bold;
-	margin-bottom: 10px;
 	color: #333;
 }
 
@@ -39,7 +38,9 @@
 .rating-average {
 	display: flex;
 	align-items: center;
-	margin-bottom: 15px;
+	margin: 20px 0;
+	border-top: 1px solid #e0e0e0;
+	padding-top:15px;
 }
 
 .label {
@@ -87,8 +88,6 @@
 
 .rating-form {
 	margin-top: 20px;
-	padding-top: 15px;
-	border-top: 1px dashed #ddd;
 }
 
 .my-rating {
