--- a/tpl/default/rating.css
+++ b/tpl/default/rating.css
@@ -87,10 +87,23 @@
 }
 
 .rating-widget .star-select {
+	position: relative;
 	cursor: pointer;
 	transition: transform 0.1s, color 0.2s;
 }
-
+.rating-widget .hover-score {
+	position: absolute;
+	top: -50%;
+	left: 50%;
+	transform: translateX(-50%);
+	color: black;
+	font-size: 12px;
+	white-space: nowrap;
+	display: none;
+}
+.rating-widget .star-select:hover .hover-score {
+	display: block;
+}
 .rating-widget .star-select:hover, 
 .rating-widget .star-select.hover {
 	color: #ffb400;
