--- a/skins/black_default/rating.css
+++ b/skins/black_default/rating.css
@@ -157,3 +157,5 @@
 .vm_body { background:#000; color:#fff; }
 .vm_top { background:#000; color:#fff; }
 .vm_tr { background:#f0f0f0; color:#000; }
+.vm_area { width:fit-content; margin:0 auto; background:#000; font-size:13px; color:#fff; padding:5px 10px; border-radius:5px; }
+.vm_box { text-align:center; }
