--- a/skins/default/rating.css
+++ b/skins/default/rating.css
@@ -144,6 +144,17 @@
 	background-color: #3a79cc !important;
 }
 
+/* 취소 버튼 스타일 */
+.rating-widget .submit-button .spb.cancel-btn {
+	margin:10px auto 0;
+	background-color: #e74c3c !important;
+	display: block;
+}
+
+.rating-widget .submit-button .spb.cancel-btn:hover {
+	background-color: #c0392b !important;
+}
+
 .rating-widget .already-rated,
 .rating-widget .login-required {
 	margin-top: 15px;
